# sdl2-opengl-renderer

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
include/: Camera.hpp
shaders/: frag.glsl  vert.glsl
src/: Camera.cpp  shader.cpp
